Update issue templates

--- a/.github/ISSUE_TEMPLATE/最初にやること.md
+++ b/.github/ISSUE_TEMPLATE/最初にやること.md
@@ -15,3 +15,5 @@ assignees: ''
   - [ ] サービス一覧の確認
     - `systemctl list-units --type=service`
   - [ ] hostname 変更
+  - [ ] ベンチマーク実行方法確認
+  - [ ] アプリケーションの動作方法確認
