Update issue templates

--- a/.github/ISSUE_TEMPLATE/最初にやること.md
+++ b/.github/ISSUE_TEMPLATE/最初にやること.md
@@ -11,9 +11,9 @@ assignees: ''
   - [ ] 環境のセットアップ（ツール類のインストール、計測スクリプトの調整、コードのリポジトリ追加）
     - https://www.tetsuzawa.com/docs/ISUCON/init/setup 参照
 - そーだいさん
-  - [ ] カルパスクリプトの実行 (cpu, memory, storage, swapとかハードウェア類の確認）
   - [ ] サービス一覧の確認
     - `systemctl list-units --type=service`
-  - [ ] hostname 変更
   - [ ] ベンチマーク実行方法確認
   - [ ] アプリケーションの動作方法確認
+- まこぴーさん
+  - [ ] インフラ構成確認（cpu, memory, disk, network, swap）
