Update issue templates

--- a/.github/ISSUE_TEMPLATE/最後にやること.md
+++ b/.github/ISSUE_TEMPLATE/最後にやること.md
@@ -15,8 +15,8 @@ assignees: ''
 - [ ] firewallなどの停止
   - `sudo systemctl disable --now ufw`
   - `sudo systemctl disable --now apparmor`
-- [ ] 無駄なサービスの停止
+- [ ] 無駄なサービスの `systemctl disable`
+- [ ] 必要なサービスの `systemctl enable`
 - [ ] マニュアル読み直し
 - [ ] 細かいチューニング
-  - カーネルパラメータ
   - gojqの導入
