--- a/.github/ISSUE_TEMPLATE/最初にやること.md
+++ b/.github/ISSUE_TEMPLATE/最初にやること.md
@@ -17,3 +17,5 @@ assignees: ''
   - [ ] アプリケーションの動作方法確認
 - まこぴーさん
   - [ ] インフラ構成確認（cpu, memory, disk, network, swap）
+  - [ ] sql一覧確認
+     - `cat main.go | perl -nal -E 'say "$1: L$." if /"((?:SELECT|DELETE|UPDATE|INSERT)[^"]*)"/'`
