--- a/.github/ISSUE_TEMPLATE/競技が開始したらやること.md
+++ b/.github/ISSUE_TEMPLATE/競技が開始したらやること.md
@@ -1,5 +1,5 @@
 ---
-name: 最初にやること
+name: 競技が開始したらやること
 about: 競技開始と同時にやることまとめ
 title: 最初にやること
 labels: ''
@@ -8,11 +8,15 @@ assignees: ''
 ---
 
 - たき
+  - [ ] 開発環境インスタンス作成
+    - cloudinitの確認は `sudo cat /var/lib/cloud/instance/user-data.txt`
   - [ ] 環境のセットアップ（ツール類のインストール、計測スクリプトの調整、コードのリポジトリ追加）
+    - [https://www.tetsuzawa.com/docs/ISUCON/init/practice-setup#2-ssh-config%E6%9B%B8%E3%81%8D%E6%8F%9B%E3%81%88%E3%82%8B](https://www.tetsuzawa.com/docs/ISUCON/init/practice-setup#2-ssh-config%E6%9B%B8%E3%81%8D%E6%8F%9B%E3%81%88%E3%82%8B)
     - https://www.tetsuzawa.com/docs/ISUCON/init/setup 参照
-- そーだいさん
   - [ ] サービス一覧の確認
     - `systemctl list-units --type=service`
+  - [ ] 初期ベンチ
+- そーだいさん
   - [ ] ベンチマーク実行方法確認
   - [ ] アプリケーションの動作方法確認
 - まこぴーさん
