Update issue templates

--- a/.github/ISSUE_TEMPLATE/競技が開始したらやること.md
+++ b/.github/ISSUE_TEMPLATE/競技が開始したらやること.md
@@ -22,4 +22,4 @@ assignees: ''
 - まこぴーさん
   - [ ] インフラ構成確認（cpu, memory, disk, network, swap）
   - [ ] sql一覧確認
-     - `cat main.go | perl -nal -E 'say "$1: L$." if /"((?:SELECT|DELETE|UPDATE|INSERT)[^"]*)"/'`
+     - `cat isuports.go | perl -nal -E 'say "L$.: $1" if /"((?:SELECT|DELETE|UPDATE|INSERT)[^"]*)"/'`
